# Flight-Maneuvers

./: .gitignore  LICENSE  README.md  __main__.py  app.py  dash.py  flask.py  main.py  run_experiments.py  setup.cfg  setup.py  train.py
anne/: dataset.py  plot.py  signal.py
anne/model/: resnet.py  se2_resnet.py  se3_resnet.py
examples/: dash.py  final_report.ipynb  introduction.ipynb  report.ipynb  se3_cnn.ipynb
flight_maneuvers/: __about__.py  __init__.py  __main__.py  adapter.py  data_module.py  flask.py  optimize.py  representations.py  train.py  training.py  tune.py  utils.py
flight_maneuvers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
flight_maneuvers/core/: __init__.py  checkpoint.py  cli.py  constants.py  early_stopping.py  log.py  profiler.py  train.py
flight_maneuvers/data/: datamodule.py  postprocessing.py  preprocessing.py
flight_maneuvers/dataset/: dataset_utils.py  timeseries_sampler.py
flight_maneuvers/evolution/: __init__.py  activations.py  base_genome.py  base_population.py  callbacks.py  population.py  utils.py
flight_maneuvers/model/: __init__.py  se3_resnet.py
flight_maneuvers/models/: checkpoint.py  checkpointing.py  gym.py  log.py  loggers.py  optim.py  train.py
flight_maneuvers/modules/: __init__.py  resnet.py  se2_resnet.py  se3_resnet.py
flight_maneuvers/neuroevolution/: __init__.py  base_genome.py  base_population.py  callbacks.py  config.py
flight_maneuvers/nn/: checkpoint.py  log.py  (+3 more)
src/: __init__.py  data_module.py  utils.py
test/: __init__.py  test_data_module.py  test_tune.py  test_utils.py
tests/: test_evolution.py
(+67 files in other folders)
