[metadata]
name = flight-maneuvers
version = 1.0.0
author = Clayton Curry
author_email= claycurry34@gmail.com
description = Flight Maneuver Reconstruction with Steerable Neural Networks
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/clay-curry/equivariant-flight-maneuvers
license = MIT
keywords = 
    steerable-cnns
    convolutional-networks
    equivariant
    flight-manuevers
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Graphics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Artificial Life
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Localization
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Natural Language :: English

[options]
packages = find:
include_package_data = True
install_requires =
    torch>=1.3,
    numpy,
    pandas,
    plotly,
    escnn,
    matplotlib

[options.entry_points]
console_scripts =
    maneuvers = flight_maneuvers.__main__:main
    